--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,12 +29,14 @@ ion-menu.md ion-list#inbox-list {
 ion-menu.md ion-list#inbox-list ion-list-header {
   font-size: 22px;
   font-weight: 600;
+  color: #757575;
 
   min-height: 20px;
 }
 
 ion-menu.md ion-list#labels-list ion-list-header {
-  font-size: 16px;
+  font-size: 20px;
+  font-weight: bolder;
 
   margin-bottom: 18px;
 
@@ -116,4 +118,17 @@ ion-note {
 
 ion-item.selected {
   --color: var(--ion-color-primary);
+}
+
+ion-item{
+  border-top: 1px solid #dadada;
+}
+
+.ion-color-featured {
+  --ion-color-base: var(--ion-color-featured);
+  --ion-color-base-rgb: var(--ion-color-featured-rgb);
+  --ion-color-contrast: var(--ion-color-featured-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-featured-contrast-rgb);
+  --ion-color-shade: var(--ion-color-featured-shade);
+  --ion-color-tint: var(--ion-color-featured-tint);
 }
