--- a/src/app/folder/folder.page.scss
+++ b/src/app/folder/folder.page.scss
@@ -3,12 +3,23 @@ ion-menu-button {
 }
 
 #container {
-  text-align: center;
+  text-align: start;
   position: absolute;
+  height: 100%;
+  width: 100%;
   left: 0;
   right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 10%;
+  padding: 10px;
+}
+
+#mapContainer {
+  height: 35%;
+  width: 100%;
+  padding: 5px;
+  top: 2%;
+  left: 0;
+  right: 0;
 }
 
 #container strong {
